--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,5 +44,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: zipped.zip
-          asset_name: ${{github.repository}}-${{ github.event.inputs.version }}.zip
+          asset_name: ${{ github.event.repository.name }}-${{ github.event.inputs.version }}.zip
           asset_content_type: application/zip
